# cr_pipeline

./: .gitignore  README.md  main.ipynb  pyproject.toml
guis/: lccheck.py  lcviewer.py
misc/: README.md  compress.py  filters.txt  mast_query.sql  queries.sql  targets.txt  top_1000.csv  upload.php
notebooks/: download_lcs.ipynb
pipeline/: complexity.py  lightcurves.py  plotting.py
tests/: __main__.py  get_exoplanets.py
tests/data/complex/: Gunther2022.csv  Popinchalk2023.csv  Stauffer2021.csv
tests/data/control/: binaries.csv  transits.csv
