[project]
name = "jmag-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Gideon Grinberg",email = "grinberg1165@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.11,<3.13"
dependencies = [
    "lightkurve (>=2.5.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "astropy (>=7.0.1,<8.0.0)",
    "astrocut (>=0.12.0,<0.13.0)",
    "wotan (>=1.10,<2.0)", # pygam, scikit-learn and scipy are all wotan deps
    "pygam (>=0.9.1,<0.10.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.11.1,<1.12)",
    "tqdm (>=4.67.1,<5.0.0)",
    "nicegui (>=2.11.1,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "coiled (>=1.79.2,<2.0.0)",
    "dask[complete] (>=2025.2.0,<2026.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
